data/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AHA_Account_Number__c</fullName>
        <inlineHelpText>American Hospital Association account number</inlineHelpText>
        <label>AHA Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Association__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Association</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>OrganizationsAssociations</relationshipLabel>
        <relationshipName>Organizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <label>Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>IC</fullName>
                    <isActive>false</isActive>
                    <label>IC</label>
                </value>
                <value>
                    <fullName>OOC</fullName>
                    <isActive>false</isActive>
                    <label>OOC</label>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                    <isActive>false</isActive>
                    <label>Suspended</label>
                </value>
                <value>
                    <fullName>Term&apos;d</fullName>
                    <isActive>false</isActive>
                    <label>Term&apos;d</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_per_Student__c</fullName>
        <formula>Est_Annual_Expenditures__c /  Membership_Enrollment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost per Student</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Energy_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Energy Program</label>
        <referenceTo>Energy_Program__c</referenceTo>
        <relationshipLabel>Organizations</relationshipLabel>
        <relationshipName>Organizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>D365AccountGuid__c</fullName>
        <externalId>true</externalId>
        <label>D365AccountGuid</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>D365ParentAccountGuid__c</fullName>
        <externalId>true</externalId>
        <label>D365ParentAccountGuid</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECAP_API_Token__c</fullName>
        <label>ECAP API Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Est_Annual_Expenditures__c</fullName>
        <label>Est. Annual Expenditures</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Faith_Based__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Faith-Based</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GL_Revenue_Account__c</fullName>
        <label>GL Revenue Account</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Delivery__c</fullName>
        <label>Invoice Delivery</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Reference__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market_Consultant_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market Consultant 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Contact_Type__c</field>
                <operation>equals</operation>
                <value>Market Consultant, MC / Client</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Organizations (Market Consultant 2)</relationshipLabel>
        <relationshipName>OrganizationsMC2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market_Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market Consultant</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Contact_Type__c</field>
                <operation>equals</operation>
                <value>Market Consultant, MC / Client</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Organizations</relationshipLabel>
        <relationshipName>OrganizationsMC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Membership_Enrollment__c</fullName>
        <label>Membership/Enrollment</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Utility_Spend__c</fullName>
        <label>Minimum Utility Spend</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Org_Legal_Name__c</fullName>
        <label>Org Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Owner_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Org Owner 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Organizations (Org Owner 2)</relationshipLabel>
        <relationshipName>Organizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Org_Record_Type__c</fullName>
        <label>Org Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Other - Internal</fullName>
                </value>
                <value>
                    <fullName>Event Locations</fullName>
                    <isActive>false</isActive>
                    <label>Event Locations</label>
                </value>
                <value>
                    <fullName>Stand by</fullName>
                    <isActive>false</isActive>
                    <label>Stand by</label>
                </value>
                <value>
                    <fullName>Suspect</fullName>
                    <isActive>false</isActive>
                    <label>Suspect</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Org_Type__c</fullName>
        <label>Org Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Association</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Community College</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Elementary School</fullName>
                </value>
                <value>
                    <fullName>Health Care</fullName>
                </value>
                <value>
                    <fullName>High School</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>K thru 12</fullName>
                </value>
                <value>
                    <fullName>Mega Church</fullName>
                </value>
                <value>
                    <fullName>Municipality</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Press</fullName>
                </value>
                <value>
                    <fullName>Private Corporation</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Sales Consultant</fullName>
                </value>
                <value>
                    <fullName>University</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_OrgID__c</fullName>
        <label>Portal OrgID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prospect_Data_Source__c</fullName>
        <label>Prospect Data Source</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Push_to_D365__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Push to D365</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Identification_Code__c</fullName>
        <label>Record Identification Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Status__c</fullName>
        <label>Sales Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Do Not Market</fullName>
                </value>
                <value>
                    <fullName>Do Not Market (Former Client)</fullName>
                </value>
                <value>
                    <fullName>Former Client (Suspended)</fullName>
                </value>
                <value>
                    <fullName>Former Client (Term’d)</fullName>
                </value>
                <value>
                    <fullName>Omit from Sales Materials</fullName>
                </value>
                <value>
                    <fullName>Remarket</fullName>
                </value>
                <value>
                    <fullName>Remarket-Standby</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>REVIEW Sales Notes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SharePoint_Path__c</fullName>
        <formula>IF ( AND ( ISBLANK ( D365AccountGuid__c ), DATEVALUE( CreatedDate ) &gt; DATE ( 2025,3,10 ) ),
Name + &quot;_&quot; + Id ,
Name + &quot;_&quot; + D365AccountGuid__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SharePoint Path</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Reason__c</fullName>
        <label>Status Reason</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&quot;Active&quot;</defaultValue>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Active_Inactive</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TK_GL_Expense_Account__c</fullName>
        <label>TK GL Expense Account</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Gross_Square_Feet__c</fullName>
        <label>Total Gross Square Feet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hasEnergyProgram__c</fullName>
        <description>Used to turn page section on when an EP is associated to the Organization.</description>
        <formula>IF ( NOT ( ISBLANK (  Current_Energy_Program__c ) ) , &quot;Yes&quot;, &quot;No&quot; )</formula>
        <inlineHelpText>Used to turn page section on when an EP is associated to the Organization.</inlineHelpText>
        <label>hasEnergyProgram</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vsa__Count_of_Account_Plans__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Count of Account Plans</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vsa__Count_of_Power_Map_Contacts__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Counts the number of Power Map Contacts for the Account</description>
        <label>Count of Power Map Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vsa__Date_Account_Planning_Started__c</fullName>
        <label>Date Account Planning Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vsa__Power_Map_Contacts_RO__c</fullName>
        <formula>HYPERLINK(&quot;/lightning/r/&quot;&amp; CASESAFEID(Id) &amp;&quot;/view&quot;,
(CASE( vsa__Count_of_Power_Map_Contacts__c,
0,(IMAGE(LEFT($Api.Partner_Server_URL_560, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_560))&amp;&quot;resource/vsa__NoPowerMapIcon&quot;, &quot;No Power Map&quot; , 50, 50)),
1,(IMAGE(LEFT($Api.Partner_Server_URL_560, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_560))&amp;&quot;resource/vsa__PowerMap1&quot;, &quot;1 Power Map Contact&quot; , 50, 50)),
2,(IMAGE(LEFT($Api.Partner_Server_URL_560, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_560))&amp;&quot;resource/vsa__PowerMap2&quot;, &quot;2 Power Map Contacts&quot; , 50, 50)),
3,(IMAGE(LEFT($Api.Partner_Server_URL_560, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_560))&amp;&quot;resource/vsa__PowerMap3&quot;, &quot;3 Power Map Contacts&quot; , 50, 50)),
4,(IMAGE(LEFT($Api.Partner_Server_URL_560, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_560))&amp;&quot;resource/vsa__PowerMap4&quot;, &quot;4 Power Map Contacts&quot; , 50, 50)),
5,(IMAGE(LEFT($Api.Partner_Server_URL_560, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_560))&amp;&quot;resource/vsa__PowerMap5&quot;, &quot;5 Power Map Contacts&quot; , 50, 50)),
(IMAGE(LEFT($Api.Partner_Server_URL_560, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_560))&amp;&quot;resource/vsa__PowerMap6&quot;, &quot;More than 5 Power Map Contacts&quot; , 50, 50))
))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Power Map Contacts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vsa__VSA_Strategy__c</fullName>
        <label>VSA Strategy</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Org_Record_Type__c</columns>
        <columns>Org_Type__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>Association__c</columns>
        <columns>Contract_Status__c</columns>
        <columns>Market_Consultant__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Organizations</label>
    </listViews>
    <listViews>
        <fullName>All_ACTIVE_Organizations</fullName>
        <columns>Status__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Org_Type__c</columns>
        <columns>Market_Consultant__c</columns>
        <columns>Association__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All ACTIVE Organizations</label>
    </listViews>
    <listViews>
        <fullName>All_INACTIVE_Organizations</fullName>
        <columns>Status__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Org_Type__c</columns>
        <columns>Market_Consultant__c</columns>
        <columns>Association__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <label>All INACTIVE Organizations</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_My_Organizations</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS2_STREET</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
        <columns>ACCOUNT.ADDRESS2_ZIP</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>EXAMPLE</value>
        </filters>
        <label>My Example Organizations</label>
    </listViews>
    <listViews>
        <fullName>Key_Reference_Organizations</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Org_Record_Type__c</columns>
        <columns>Org_Type__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>Association__c</columns>
        <columns>Contract_Status__c</columns>
        <columns>Market_Consultant__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Key_Reference__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Key Reference Organizations</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>Status__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>Market_Consultant__c</columns>
        <columns>Org_Type__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Organizations</label>
    </listViews>
    <listViews>
        <fullName>Org_Account_Hierarchy</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Status__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <filterScope>Everything</filterScope>
        <label>Org_Account_Hierarchy</label>
    </listViews>
    <listViews>
        <fullName>z_Created_Today</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Org_Record_Type__c</columns>
        <columns>Org_Type__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>z Created Today</label>
    </listViews>
    <recordTypes>
        <fullName>Client</fullName>
        <active>true</active>
        <label>Client</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event_Location</fullName>
        <active>false</active>
        <label>Event Location</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>false</active>
        <label>Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prospect</fullName>
        <active>false</active>
        <label>Prospect</label>
    </recordTypes>
    <recordTypes>
        <fullName>Stand_By</fullName>
        <active>false</active>
        <label>Stand By</label>
    </recordTypes>
    <recordTypes>
        <fullName>Suspect</fullName>
        <active>false</active>
        <label>Suspect</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>